Adds support for leveraging Windows Shell to update desktop wallpaper rather than relying on Registry editing. Adds Index property to VirtualDesktop for ease of identification. Cleans up some class and member names and re-arranges folder structure.

--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Configuration\DesktopConfigurationMapper.cs" />
     <Compile Include="Desktop\Fit.cs" />
     <Compile Include="Configuration\IAppConfiguration.cs" />
+    <Compile Include="Desktop\PropertyChangingEventArgsExtensions.cs" />
+    <Compile Include="Desktop\PropertyRollBackChangesEventArgs.cs" />
     <Compile Include="IAppView.cs" />
     <Compile Include="IAppController.cs" />
     <Compile Include="Desktop\IBackground.cs" />
