--- a/MultipleDesktop.Windows/MultipleDesktop.Windows.csproj
+++ b/MultipleDesktop.Windows/MultipleDesktop.Windows.csproj
@@ -40,13 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interop\Constants.cs" />
+    <Compile Include="Interop\IWindowsDesktopAdapter.cs" />
+    <Compile Include="Interop\Registry\NativeMethods.cs" />
+    <Compile Include="Interop\Registry\WindowsRegistryAdapter.cs" />
+    <Compile Include="Interop\Shell\FitConverter.cs" />
+    <Compile Include="Interop\Shell\WindowsShellAdapter.cs" />
     <Compile Include="IWindowsDesktop.cs" />
-    <Compile Include="WindowsDesktopRegistry.cs" />
+    <Compile Include="WindowsDesktop.cs" />
     <Compile Include="VirtualDesktopStateProvider.cs" />
-    <Compile Include="Native.cs" />
+    <Compile Include="Interop\Shell\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registry.cs" />
-    <Compile Include="WindowsDesktopShell.cs" />
+    <Compile Include="Interop\Registry\Registry.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
@@ -54,6 +59,7 @@
       <Name>MultipleDesktop.Mvc</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
