Adds unit tests for AppController.Load(). Adds ConfigurationController to reduce complexity of AppController.Load() for testing.

--- a/MultipleDesktop.Configuration/MultipleDesktop.Configuration.csproj
+++ b/MultipleDesktop.Configuration/MultipleDesktop.Configuration.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConfiguration.cs" />
+    <Compile Include="ConfigurationController.cs" />
     <Compile Include="VirtualDesktopConfiguration.cs" />
     <Compile Include="IXmlConfigurationFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
