--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AppController.cs" />
     <Compile Include="AppViewMediator.cs" />
+    <Compile Include="Configuration\IConfigurationController.cs" />
     <Compile Include="Desktop\Background.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Configuration\DesktopConfigurationMapper.cs" />
