--- a/MultipleDesktop.Configuration/MultipleDesktop.Configuration.csproj
+++ b/MultipleDesktop.Configuration/MultipleDesktop.Configuration.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MultipleDesktop.Configuration</RootNamespace>
     <AssemblyName>MultipleDesktop.Configuration</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,14 +38,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConfiguration.cs" />
@@ -59,6 +55,10 @@
     <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
       <Project>{E33A908A-68B8-4C2C-8AE0-3F1D5CA8A8A2}</Project>
       <Name>MultipleDesktop.Mvc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\System\System.Xml.Extended\System.Xml.Extended.csproj">
+      <Project>{5A9DAB6B-16E5-4391-A2A8-D301847466B1}</Project>
+      <Name>System.Xml.Extended</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
