--- a/System/mscorlib.Extended/System.IO/System.IO.csproj
+++ b/System/mscorlib.Extended/System.IO/System.IO.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DE85E68-69EC-4947-8B35-D1974CCDF5F1}</ProjectGuid>
+    <ProjectGuid>{7082B01B-C5DF-4B34-9EC6-4DF5DAD5144A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultipleDesktop.Windows</RootNamespace>
-    <AssemblyName>MultipleDesktop.Windows</AssemblyName>
+    <RootNamespace>System.IO</RootNamespace>
+    <AssemblyName>System.IO</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -41,26 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interop\Constants.cs" />
-    <Compile Include="Interop\IWindowsDesktopAdapter.cs" />
-    <Compile Include="Interop\Registry\NativeMethods.cs" />
-    <Compile Include="Interop\Registry\WindowsRegistryAdapter.cs" />
-    <Compile Include="Interop\Shell\FitConverter.cs" />
-    <Compile Include="Interop\Shell\WindowsShellAdapter.cs" />
-    <Compile Include="IWindowsDesktop.cs" />
-    <Compile Include="WindowsDesktop.cs" />
-    <Compile Include="VirtualDesktopStateProvider.cs" />
-    <Compile Include="Interop\Shell\NativeMethods.cs" />
+    <Compile Include="IFile.cs" />
+    <Compile Include="IFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interop\Registry\Registry.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
-      <Project>{E33A908A-68B8-4C2C-8AE0-3F1D5CA8A8A2}</Project>
-      <Name>MultipleDesktop.Mvc</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
