--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -49,6 +49,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -81,9 +82,13 @@
       <Project>{E33A908A-68B8-4C2C-8AE0-3F1D5CA8A8A2}</Project>
       <Name>MultipleDesktop.Mvc</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\System\System.IO\System.IO.csproj">
-      <Project>{7082b01b-c5df-4b34-9ec6-4df5dad5144a}</Project>
-      <Name>System.IO</Name>
+    <ProjectReference Include="..\..\System\mscorlib.Extended\mscorlib.Extended.csproj">
+      <Project>{18CDEE24-71B4-4D5A-A7BE-B558BEE58FB2}</Project>
+      <Name>mscorlib.Extended</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\System\System.Xml.Extended\System.Xml.Extended.csproj">
+      <Project>{5a9dab6b-16e5-4391-a2a8-d301847466b1}</Project>
+      <Name>System.Xml.Extended</Name>
     </ProjectReference>
     <ProjectReference Include="..\VisualStudio.TestTools.UnitTesting\VisualStudio.TestTools.UnitTesting.csproj">
       <Project>{9A1BAFC8-B61A-47BC-8B1E-5A2A63354CA1}</Project>
