--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Configuration\ConfigurationControllerTests.cs" />
+    <Compile Include="Configuration\XmlConfigurationProviderTests.cs" />
     <Compile Include="Mvc\AppControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
