Adds testability mechanisms to the MultipleDesktop.Windows project to allow COM interfaces to be exposed to test projects for mocking.

--- a/MultipleDesktop.Windows/MultipleDesktop.Windows.csproj
+++ b/MultipleDesktop.Windows/MultipleDesktop.Windows.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Interop\Registry\WindowsRegistryAdapter.cs" />
     <Compile Include="Interop\Shell\FitConverter.cs" />
     <Compile Include="Interop\Shell\WindowsShellAdapter.cs" />
+    <Compile Include="Interop\Shell\WindowsShellFactory.cs" />
     <Compile Include="IWindowsDesktop.cs" />
     <Compile Include="WindowsDesktop.cs" />
     <Compile Include="VirtualDesktopStateProvider.cs" />
