--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Configuration\ConfigurationControllerTest.cs" />
+    <Compile Include="Configuration\IoResultTest.cs" />
     <Compile Include="Configuration\XmlConfigurationProviderTest.cs" />
     <Compile Include="Mvc\AppControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
