--- a/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
+++ b/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D3E4551F-B9EF-406D-BD2E-520975BCB281}</ProjectGuid>
+    <ProjectGuid>{53A38DBF-E7FE-4466-9169-B322075124D0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultipleDesktop.Configuration</RootNamespace>
-    <AssemblyName>MultipleDesktop.Configuration</AssemblyName>
+    <RootNamespace>MultipleDesktop.Configuration.Xml</RootNamespace>
+    <AssemblyName>MultipleDesktop.Configuration.Xml</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\</OutputPath>
@@ -33,34 +29,25 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationController.cs" />
-    <Compile Include="IXmlConfigurationFactory.cs" />
+    <Compile Include="AppConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlConfigurationFactory.cs" />
-    <Compile Include="XmlConfigurationProvider.cs" />
+    <Compile Include="VirtualDesktopConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MultipleDesktop.Configuration.Xml\MultipleDesktop.Configuration.Xml.csproj">
-      <Project>{53A38DBF-E7FE-4466-9169-B322075124D0}</Project>
-      <Name>MultipleDesktop.Configuration.Xml</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
       <Project>{E33A908A-68B8-4C2C-8AE0-3F1D5CA8A8A2}</Project>
       <Name>MultipleDesktop.Mvc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\System\System.Xml.Extended\System.Xml.Extended.csproj">
-      <Project>{5A9DAB6B-16E5-4391-A2A8-D301847466B1}</Project>
-      <Name>System.Xml.Extended</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
