Adds FilePath, a non-nullable string planned for use with VirtualDesktopConfiguration.BackgroundPath & BackgroundPathAttribute, as well as associated unit tests.

--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Configuration\Xml\XmlSerializationTest.cs" />
     <Compile Include="Mvc\AppControllerTest.cs" />
     <Compile Include="Mvc\Configuration\DesktopConfigurationMapperTest.cs" />
+    <Compile Include="Mvc\Configuration\FilePathTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
