--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="AppController.cs" />
     <Compile Include="AppViewMediator.cs" />
+    <Compile Include="Configuration\FilePath.cs" />
     <Compile Include="Configuration\IConfigurationController.cs" />
     <Compile Include="Desktop\Background.cs" />
     <Compile Include="Constants.cs" />
