Moves XSD schema files to the correct project folder. Finalizes XmlSerializationTest's Xml validation initialization logic. Adds unit tests to validate xml via XSD schema.

--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -77,13 +77,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Configuration\schema0.xsd">
+    <None Include="Configuration\Xml\schema0.xsd">
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Configuration\schema1.xsd">
+    <None Include="Configuration\Xml\schema1.xsd">
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
