--- a/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
+++ b/Test/Test.MultipleDesktop/Test.MultipleDesktop.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Configuration\IoResultTest.cs" />
     <Compile Include="Configuration\Xml\AppConfigurationTest.cs" />
     <Compile Include="Configuration\XmlConfigurationProviderTest.cs" />
+    <Compile Include="Configuration\Xml\VirtualDesktopConfigurationTest.cs" />
     <Compile Include="Configuration\Xml\XmlSerializationTest.cs" />
     <Compile Include="Mvc\AppControllerTest.cs" />
     <Compile Include="Mvc\Configuration\DesktopConfigurationMapperTest.cs" />
