--- a/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
+++ b/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AppConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VirtualDesktopConfiguration.cs" />
+    <Compile Include="XmlIgnoreException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
