--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AppViewMediator.cs" />
     <Compile Include="Configuration\FilePath.cs" />
     <Compile Include="Configuration\IConfigurationController.cs" />
+    <Compile Include="IPropertyChangedBinding.cs" />
     <Compile Include="Desktop\Background.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Configuration\DesktopConfigurationMapper.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Configuration\IoResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Desktop\VirtualDesktop.cs" />
+    <Compile Include="PropertyChangedBinding.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\System\mscorlib.Extended\mscorlib.Extended.csproj">
