Modifies VirtualDesktopConfiguration to throw when setting BackgroundPath or Fit properties if the object has not been bound to a valid IVirtualDesktop via either VirtualDesktopConfiguration.ctor(IVirtualDesktop, IConfigurationFactory) or BindToTarget(IVirtualDesktop, IConfigurationFactory). Adds unit tests around the binding process.

--- a/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
+++ b/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
@@ -43,7 +43,7 @@
     <Compile Include="AppConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VirtualDesktopConfiguration.cs" />
-    <Compile Include="XmlIgnoreException.cs" />
+    <Compile Include="NoTargetBoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
