--- a/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
+++ b/MultipleDesktop.Configuration.Xml/MultipleDesktop.Configuration.Xml.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AppConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag.cs" />
     <Compile Include="VirtualDesktopConfiguration.cs" />
     <Compile Include="NoTargetBoundException.cs" />
   </ItemGroup>
