--- a/Test/VisualStudio.TestTools.UnitTesting/VisualStudio.TestTools.UnitTesting.csproj
+++ b/Test/VisualStudio.TestTools.UnitTesting/VisualStudio.TestTools.UnitTesting.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ExceptionMock.cs" />
     <Compile Include="Expect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml\XmlDocumentExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
