--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Configuration\IConfigurationController.cs" />
     <Compile Include="IPropertyChangedBinding.cs" />
     <Compile Include="Desktop\Background.cs" />
-    <Compile Include="Constants.cs" />
+    <Compile Include="Default.cs" />
     <Compile Include="Configuration\DesktopConfigurationMapper.cs" />
     <Compile Include="Desktop\Fit.cs" />
     <Compile Include="Configuration\IAppConfiguration.cs" />
