--- a/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
+++ b/MultipleDesktop.Mvc/MultipleDesktop.Mvc.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Desktop\VirtualDesktop.cs" />
     <Compile Include="PropertyChangedBinding.cs" />
+    <Compile Include="View\WindowState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\System\mscorlib.Extended\mscorlib.Extended.csproj">
