--- a/MultipleDesktop.Windows.PresentationFoundation/MultipleDesktop.Windows.PresentationFoundation.csproj
+++ b/MultipleDesktop.Windows.PresentationFoundation/MultipleDesktop.Windows.PresentationFoundation.csproj
@@ -42,7 +42,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -51,6 +50,8 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="View\SourceInitializedMediator.cs" />
+    <Compile Include="View\WindowExtensions.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,7 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Application\CompositionRoot.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -95,6 +96,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultipleDesktop.Application\MultipleDesktop.Application.csproj">
+      <Project>{AEAFCD2D-5AF6-4950-A315-08995600476F}</Project>
+      <Name>MultipleDesktop.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultipleDesktop.Mvc\MultipleDesktop.Mvc.csproj">
+      <Project>{E33A908A-68B8-4C2C-8AE0-3F1D5CA8A8A2}</Project>
+      <Name>MultipleDesktop.Mvc</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
