--- a/System/mscorlib.Extended/mscorlib.Extended.csproj
+++ b/System/mscorlib.Extended/mscorlib.Extended.csproj
@@ -31,13 +31,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System.ComponentModel\Event.cs" />
     <Compile Include="System.IO\File.cs" />
     <Compile Include="System.IO\FileSystem.cs" />
     <Compile Include="System.IO\IFile.cs" />
     <Compile Include="System.IO\IFileSystem.cs" />
+    <Compile Include="System\Event.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
