--- a/System/mscorlib.Extended/mscorlib.Extended.csproj
+++ b/System/mscorlib.Extended/mscorlib.Extended.csproj
@@ -41,6 +41,7 @@
     <Compile Include="System.IO\IFile.cs" />
     <Compile Include="System.IO\IFileSystem.cs" />
     <Compile Include="System\Event.cs" />
+    <Compile Include="System\Invoke.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
