--- a/MultipleDesktop.Application/MultipleDesktop.Application.csproj
+++ b/MultipleDesktop.Application/MultipleDesktop.Application.csproj
@@ -39,6 +39,9 @@
     <Compile Include="DebugHideBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseHideBehavior.cs" />
+    <Compile Include="ViewModel\IMainViewModel.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="View\IMainView.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultipleDesktop.Configuration\MultipleDesktop.Configuration.csproj">
