--- a/MultipleDesktop.Application/MultipleDesktop.Application.csproj
+++ b/MultipleDesktop.Application/MultipleDesktop.Application.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseHideBehavior.cs" />
     <Compile Include="ViewModel\IMainViewModel.cs" />
+    <Compile Include="ViewModel\IWindowViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\IMainView.cs" />
   </ItemGroup>
