This was clearly going somewhere, but I don't remember where. Pushing this to a remote WIP branch so it doesn't get lost in a fire.

--- a/System/mscorlib.Extended/mscorlib.Extended.csproj
+++ b/System/mscorlib.Extended/mscorlib.Extended.csproj
@@ -41,6 +41,7 @@
     <Compile Include="System.IO\FileSystem.cs" />
     <Compile Include="System.IO\IFile.cs" />
     <Compile Include="System.IO\IFileSystem.cs" />
+    <Compile Include="System.Windows.Input\DelegateCommand.cs" />
     <Compile Include="System\Event.cs" />
     <Compile Include="System\Invoke.cs" />
     <Compile Include="System\ProxyEventHandler.cs" />
